Fix scroll on mobile, tweak styles for header-6

--- a/.dev/assets/shared/css/header/header.scss
+++ b/.dev/assets/shared/css/header/header.scss
@@ -44,6 +44,10 @@ body.has-sticky-header {
 	&.admin-bar {
 		.site-header {
 			top: 32px;
+
+			@media (max-width:782px) {
+				top: 46px;
+			}
 		}
 	}
 }
